more changes, spacing issue

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Angkor&family=Inter&display=swap');
 
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .container {
     display: flex;
     flex-direction: column;
